# gadmin-samba-gtk3

./: Autoinstall  ChangeLog  INSTALL  MAKE_RPM  MAKE_TGZ  Makefile  Makefile.am  Makefile.in  README  TODO  config.h  config.h.in  config.status  configure  configure.in  gadmin-samba.spec
desktop/: gadmin-samba.desktop
etc/security/console.apps/: gadmin-samba
po/: ChangeLog  Makefile.in  de.gmo  de.po  fr.gmo  fr.po  gadmin-samba.pot  translation_howto.sh
scripts/: example.bat  gadmin-samba-pdf
src/: Makefile  Makefile.am  Makefile.in  activate_button_clicked.c  activate_button_clicked.h  add_change_user.c  add_change_user.h  add_macct.c  add_macct.h  add_share.c  add_share.h  add_standard_users.c  add_standard_users.h  allocate.c  allocate.h  apply_button_clicked.c  apply_button_clicked.h  apply_server_settings.c  apply_server_settings.h  apply_share_settings.c  apply_share_settings.h  change_macct.c  change_macct.h  chars_are_digits.c  chars_are_digits.h  clear_security_tab.c  clear_security_tab.h  commands.c  commands.h  commented.c  commented.h  create_conf_tab.c  create_conf_tab.h  create_conn_tab.c  create_conn_tab.h  create_del_system_user_question.c  create_del_system_user_question.h  create_disc_tab.c  create_disc_tab.h  create_import_question.c  (+124 more)
